  of a checkpoint.
* Fix detection of 6 GHz band capability for WiFi devices
* Allow IPv6 SLAAC and static IPv6 DNS server assignment for modem broadband
  when IPv6 device address was not explicitly passed on by ModemManager
* Fix a performance issue that was leading to 100% CPU usage by NetworkManager
  if external programs were doing a big amount of routes updates.

=============================================
NetworkManager-1.46
Overview of changes since NetworkManager-1.44
=============================================

* Support dynamic value "${NETWORK_SSID}" for connection.stable-id to generate
  the stable ID based on the Wi-Fi's SSID.
* Support new value "wifi.cloned-mac-address=stable-ssid" for randomizing the
  MAC address based on the Wi-Fi network.
* Change internal ABI of NMSetting types and NMSimpleConnection. The layout of
  these structs was already hidden from public headers since 1.34 and this change
  should not be noticeable.
* Honor udev property ID_NET_AUTO_LINK_LOCAL_ONLY=1 for enabling
  link local addresses on default wired connection.
* Honor udev property ID_NET_MANAGED_BY to only manage an interface
  when set to "org.freedesktop.NetworkManager".
* D-Bus methods StartFind() and StopFind() on interface
  "org.freedesktop.NetworkManager.Device.WifiP2P" now require the
  "org.freedesktop.NetworkManager.wifi.scan" Polkit permission.
* Drop build support with Python2. Python3 is now required.
* nmcli: limit number of printed addresses/routes in `nmcli` overview to 10.
* Limit number of exported IP addresses/routes on D-Bus to 100 to reduce
  performance cost. Also, D-Bus updates for addresses/routes are now rate
  limited to 3 per second.
* cloud-setup: enable more sandboxing options in systemd service file.
* nmcli: show WiFi bandwidth.
* Internal improvements and bugfixes.
* Man page now show the format and accepted values of all properties.
* Added the 'dns-change' dispatcher event.