@@ -5304,6 +5304,8 @@ src_nmtui_nmtui_SOURCES = \
 	src/nmtui/nmt-page-team-port.h \
 	src/nmtui/nmt-page-team.c \
 	src/nmtui/nmt-page-team.h \
+	src/nmtui/nmt-page-veth.c \
+	src/nmtui/nmt-page-veth.h \
 	src/nmtui/nmt-page-vlan.c \
 	src/nmtui/nmt-page-vlan.h \
 	src/nmtui/nmt-page-wifi.c \
