@@ -39,6 +39,7 @@
 #include "nmt-page-ppp.h"
 #include "nmt-page-team.h"
 #include "nmt-page-team-port.h"
+#include "nmt-page-veth.h"
 #include "nmt-page-vlan.h"
 #include "nmt-page-wifi.h"
 #include "nmt-page-wireguard.h"
@@ -369,6 +370,8 @@ nmt_editor_constructed(GObject *object)
         page = nmt_page_dsl_new(priv->edit_connection, deventry);
     else if (nm_connection_is_type(priv->edit_connection, NM_SETTING_TEAM_SETTING_NAME))
         page = nmt_page_team_new(priv->edit_connection, deventry);
+    else if (nm_connection_is_type(priv->edit_connection, NM_SETTING_VETH_SETTING_NAME))
+        page = nmt_page_veth_new(priv->edit_connection, deventry);
     else if (nm_connection_is_type(priv->edit_connection, NM_SETTING_VLAN_SETTING_NAME))
         page = nmt_page_vlan_new(priv->edit_connection, deventry);
     else if (nm_connection_is_type(priv->edit_connection, NM_SETTING_WIRED_SETTING_NAME))
